// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Contribution /> should NOT render invalid preselected convention 1`] = `
.c3 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c4 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c1 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(255,112,103,0.26),0px 4px 5px rgba(255,112,103,0.35);
  opacity: 1;
}

.c6:link,
.c6:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c6:not([disabled]):hover,
.c6:not([disabled]):active,
.c6:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c6[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c5 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  background-color: #f2f5fa;
  border: 1px solid transparent;
  border-radius: 0.6rem;
  margin: 40px 0;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

<div>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <h2
        class="c2"
      >
        <div
          class="c3"
        />
        Que dit le code du travail ?
      </h2>
    </header>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <h2
        class="c2"
      >
        <div
          class="c3"
        />
        Que dit votre convention collective ?
      </h2>
    </header>
    <div>
      <h6
        class="c4"
      >
        <span
          aria-label="Icone convention collective"
          role="img"
        >
          📖
        </span>
         
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=123"
          rel="noopener noreferrer"
          target="_blank"
        >
          preselected convention
           (IDCC 
          0000
          )
        </a>
      </h6>
      <div
        class="c5"
      >
        Désolé nous n'avons pas de réponse pour cette convention collective
      </div>
      <br />
      <br />
      <button
        class="c6"
      >
        Changer de convention collective
      </button>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render answer references 1`] = `
.c3 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c4 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c1 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(255,112,103,0.26),0px 4px 5px rgba(255,112,103,0.35);
  opacity: 1;
}

.c6:link,
.c6:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c6:not([disabled]):hover,
.c6:not([disabled]):active,
.c6:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c6[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c5 {
  margin: 5px 0;
  list-style-type: none;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

<div>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <h2
        class="c2"
      >
        <div
          class="c3"
        />
        Que dit le code du travail ?
      </h2>
    </header>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <h2
        class="c2"
      >
        <div
          class="c3"
        />
        Que dit votre convention collective ?
      </h2>
    </header>
    <div>
      <h6
        class="c4"
      >
        <span
          aria-label="Icone convention collective"
          role="img"
        >
          📖
        </span>
         
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=123"
          rel="noopener noreferrer"
          target="_blank"
        >
          preselected convention
           (IDCC 
          0044
          )
        </a>
      </h6>
      <div>
        <p>
          hello 
          <strong>
            123
          </strong>
        </p>
      </div>
      <header
        class="c1"
      >
        <h3
          class="c2"
        >
          <div
            class="c3"
          />
          Références
        </h3>
      </header>
      <h4
        class="c4"
      >
        Convention collective
      </h4>
      <li
        class="c5"
      >
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=123"
          rel="noopener noreferrer"
          target="_blank"
        >
          reference CC 1
        </a>
      </li>
      <h4
        class="c4"
      >
        Autres sources
      </h4>
      <li
        class="c5"
      >
        <a
          href="http://path/to/ref"
          rel="noopener noreferrer"
          target="_blank"
        >
          reference externe 1
        </a>
      </li>
      <br />
      <br />
      <button
        class="c6"
      >
        Changer de convention collective
      </button>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render preselected convention 1`] = `
.c3 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c4 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c1 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(255,112,103,0.26),0px 4px 5px rgba(255,112,103,0.35);
  opacity: 1;
}

.c5:link,
.c5:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c5:not([disabled]):hover,
.c5:not([disabled]):active,
.c5:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c5[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

<div>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <h2
        class="c2"
      >
        <div
          class="c3"
        />
        Que dit le code du travail ?
      </h2>
    </header>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <h2
        class="c2"
      >
        <div
          class="c3"
        />
        Que dit votre convention collective ?
      </h2>
    </header>
    <div>
      <h6
        class="c4"
      >
        <span
          aria-label="Icone convention collective"
          role="img"
        >
          📖
        </span>
         
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=123"
          rel="noopener noreferrer"
          target="_blank"
        >
          preselected convention
           (IDCC 
          0044
          )
        </a>
      </h6>
      <div>
        <p>
          hello 
          <strong>
            123
          </strong>
        </p>
      </div>
      <br />
      <br />
      <button
        class="c5"
      >
        Changer de convention collective
      </button>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with both answers 1`] = `
.c4 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c1 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c6 {
  width: 100%;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

.c5 {
  margin: 2rem 0;
  padding: 1rem;
}

@media print {
  .c4 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

<div>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <h2
        class="c2"
      >
        <div
          class="c3"
        />
        Que dit le code du travail ?
      </h2>
    </header>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <h2
        class="c2"
      >
        <div
          class="c3"
        />
        Que dit votre convention collective ?
      </h2>
    </header>
    <div>
      <div
        class="c4 c5"
      >
        
        <p>
          Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
        </p>
        <input
          class="c6"
          placeholder="Nom d'entreprise, SIRET, nom de convention collective"
          role="search"
          type="search"
          value=""
        />
        
      </div>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with conventions answer 1`] = `
.c4 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c1 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c6 {
  width: 100%;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

.c5 {
  margin: 2rem 0;
  padding: 1rem;
}

@media print {
  .c4 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

<div>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <h2
        class="c2"
      >
        <div
          class="c3"
        />
        Que dit votre convention collective ?
      </h2>
    </header>
    <div>
      <div
        class="c4 c5"
      >
        
        <p>
          Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
        </p>
        <input
          class="c6"
          placeholder="Nom d'entreprise, SIRET, nom de convention collective"
          role="search"
          type="search"
          value=""
        />
        
      </div>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with generic answer 1`] = `
.c3 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c1 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

<div>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <h2
        class="c2"
      >
        <div
          class="c3"
        />
        Que dit le code du travail ?
      </h2>
    </header>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with generic answer and content 1`] = `
.c3 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c1 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

<div>
  <section
    class="c0"
  >
    <header
      class="c1"
    >
      <h2
        class="c2"
      >
        <div
          class="c3"
        />
        Que dit le code du travail ?
      </h2>
    </header>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with no answer 1`] = `<div />`;
